# adk-demos

./: README.md
adk_helper/: README.md  pyproject.toml  refresh_sources.sh
adk_helper/adk_agent/: .env-template  adk_docs.md  adk_samples.md  agent.py
adk_helper/tests/: test_agent.py
hello2x/: README.md  pyproject.toml
hello2x/hello1/: agent.py
hello2x/hello2/: agent.py  agent_engine_app.py  test.py
