[project]
name = "hello2x"
version = "0.1.0"
description = "A multi-agent sandbox project."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-adk"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hello1", "hello2"] 